--- a/website/index.html
+++ b/website/index.html
@@ -8,17 +8,18 @@
 </head>
 <body>
     <div class="header">
-        <div class="title">
+        <div class="title" textColor="light">
             Välkommen till Delikat Flora
         </div>
-        <div class="contactInfo">
+        <div class="contactInfo" textColor="light">
             <p class="subtitle">
                 Kontakt Information:
             </p>
             <p>Mail: info@DOMÄN</p>
+            <p>Telefonnummer: 0630 555 555</p>
             <p>Adress: Fjällgatan 32H 981 39 Finspång</p>
         </div>
-        <div class="openingHours">
+        <div class="openingHours" textColor="light">
             <p class="subtitle">
                 Öppettider:
             </p>
