--- a/website/index.html
+++ b/website/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="header">
         <div class="title" textColor="light">
@@ -15,7 +16,7 @@
             <p class="subtitle">
                 Kontakt Information:
             </p>
-            <p>Mail: info@DOMÄN</p>
+            <p>Mail: info@pages.github.io</p>
             <p>Telefonnummer: 0630 555 555</p>
             <p>Adress: Fjällgatan 32H 981 39 Finspång</p>
         </div>
@@ -23,14 +24,66 @@
             <p class="subtitle">
                 Öppettider:
             </p>
-            <p>Måndagar 10-16</p>
-            <p>Tisdagar 10-16</p>
-            <p>Onsdagar 12-18</p>
-            <p>Torsdagar 10-16</p>
-            <p>Fredagar 10-16</p>
-            <p>Lördagar 12-15</p>
-            <p>Söndag STÄNGT</p>
+            <table class="openingHoursTable">
+                <tr>
+                    <td >
+                        Måndag
+                    </td>
+                    <td openingHours>
+                        10-16
+                    </td>
+                </tr>
+                <tr>
+                    <td >
+                        Tisdag
+                    </td>
+                    <td openingHours>
+                        10-16
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Onsdag
+                    </td>
+                    <td openingHours>
+                        12-18
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Torsdag
+                    </td>
+                    <td openingHours>
+                        10-16
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Fredag
+                    </td>
+                    <td openingHours>
+                        10-16
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Lördag
+                    </td>
+                    <td openingHours>
+                        12-15
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Söndag
+                    </td>
+                    <td openingHours>
+                        STÄNGT
+                    </td>
+                </tr>
+            </table>
         </div>
     </div>
 </body>
+
 </html>
