more design stuff

--- a/website/index.html
+++ b/website/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,81 +10,84 @@
 
 <body>
     <div class="header">
-        <div class="title" textColor="light">
-            Välkommen till Delikat Flora
+            <div class="title" textColor="light">
+                Välkommen till Delikat Flora
+            </div>
+            <div class="contactInfo" textColor="light">
+                <p class="subtitle">
+                    Kontakt Information:
+                </p>
+                <p>Mail: info@pages.github.io</p>
+                <p>Telefonnummer: 0630 555 555</p>
+                <p>Adress: Fjällgatan 32H 981 39 Finspång</p>
+            </div>
         </div>
-        <div class="contactInfo" textColor="light">
-            <p class="subtitle">
-                Kontakt Information:
-            </p>
-            <p>Mail: info@pages.github.io</p>
-            <p>Telefonnummer: 0630 555 555</p>
-            <p>Adress: Fjällgatan 32H 981 39 Finspång</p>
-        </div>
-        <div class="openingHours" textColor="light">
-            <p class="subtitle">
-                Öppettider:
-            </p>
-            <table class="openingHoursTable">
-                <tr>
-                    <td >
-                        Måndag
-                    </td>
-                    <td openingHours>
-                        10-16
-                    </td>
-                </tr>
-                <tr>
-                    <td >
-                        Tisdag
-                    </td>
-                    <td openingHours>
-                        10-16
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        Onsdag
-                    </td>
-                    <td openingHours>
-                        12-18
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        Torsdag
-                    </td>
-                    <td openingHours>
-                        10-16
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        Fredag
-                    </td>
-                    <td openingHours>
-                        10-16
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        Lördag
-                    </td>
-                    <td openingHours>
-                        12-15
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        Söndag
-                    </td>
-                    <td openingHours>
-                        STÄNGT
-                    </td>
-                </tr>
-            </table>
+    <div class="mainInfo">
+        <div class="bottomInfo">
+            <div class="openingHours" textColor="light">
+                <p class="subtitle">
+                    Öppettider:
+                </p>
+                <table class="openingHoursTable">
+                    <tr>
+                        <td>
+                            Måndag
+                        </td>
+                        <td openingHours>
+                            10-16
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            Tisdag
+                        </td>
+                        <td openingHours>
+                            10-16
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            Onsdag
+                        </td>
+                        <td openingHours>
+                            12-18
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            Torsdag
+                        </td>
+                        <td openingHours>
+                            10-16
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            Fredag
+                        </td>
+                        <td openingHours>
+                            10-16
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            Lördag
+                        </td>
+                        <td openingHours>
+                            12-15
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            Söndag
+                        </td>
+                        <td openingHours>
+                            STÄNGT
+                        </td>
+                    </tr>
+                </table>
+            </div>
         </div>
     </div>
 </body>
-
 </html>
