a bunch of design things

--- a/website/index.html
+++ b/website/index.html
@@ -10,25 +10,28 @@
 
 <body>
     <div class="header">
-            <div class="title" textColor="light">
-                Välkommen till Delikat Flora
+        <div class="title" textColor="light">
+            DELIKAT FLORA
+        </div>
+        <div class="allServices">
+            <div class="products">
+                Prokdukter
             </div>
-            <div class="contactInfo" textColor="light">
-                <p class="subtitle">
-                    Kontakt Information:
-                </p>
-                <p>Mail: info@pages.github.io</p>
-                <p>Telefonnummer: 0630 555 555</p>
-                <p>Adress: Fjällgatan 32H 981 39 Finspång</p>
+            <div class="flowergram">
+                Blommogram
+            </div>
+            <div class="otherServices">
+                Andra Tjänster
             </div>
         </div>
+    </div>
     <div class="mainInfo">
         <div class="bottomInfo">
             <div class="openingHours" textColor="light">
                 <p class="subtitle">
                     Öppettider:
                 </p>
-                <table class="openingHoursTable">
+                <table class="openingHoursTable" textColor="light">
                     <tr>
                         <td>
                             Måndag
@@ -87,7 +90,25 @@
                     </tr>
                 </table>
             </div>
+            <div class="contactInfo" textColor="light">
+                <p class="subtitle">
+                    Kontaktinformation:
+                </p>
+                <p>
+                    Mail: info@github.pages.io
+                </p>
+                <p>
+                    Telefonnummer: 0630 555 555
+                </p>
+                <p>
+                    Adress: Fjällgatan 32H 981 39 Finspång
+                </p>
+                <div class="logo">
+                    F
+                </div>
+            </div>
         </div>
     </div>
 </body>
+
 </html>
