more design changes

--- a/website/andra_tjänster.html
+++ b/website/andra_tjänster.html
@@ -23,9 +23,9 @@
             <a href="blommogram.html" class="flowergram">
                 Blommogram
             </a>
-            <a href="andra_tjänster.html" class="otherServices">
+            <div class="otherServices">
                 Andra Tjänster
-            </a>
+            </div>
         </div>
     </div>
     <div class="mainInfo">
