--- a/website/blommogram.html
+++ b/website/blommogram.html
@@ -20,9 +20,9 @@
             <a href="produkter.html" class="products">
                 Produkter
             </a>
-            <a href="blommogram.html" class="flowergram">
+            <div class="flowergram">
                 Blommogram
-            </a>
+            </div>
             <a href="andra_tjänster.html" class="otherServices">
                 Andra Tjänster
             </a>
