--- a/website/produkter.html
+++ b/website/produkter.html
@@ -17,9 +17,9 @@
             F
         </div>
         <div class="allServices" textColor="dark">
-            <a href="produkter.html" class="products">
+            <div class="products">
                 Produkter
-            </a>
+            </div>
             <a href="blommogram.html" class="flowergram">
                 Blommogram
             </a>
