Fixat så att produkter finns på products sidan

--- a/website/index.html
+++ b/website/index.html
@@ -16,19 +16,18 @@
         <div class="logo">
             F
         </div>
-        <div class="allServices" textColor="dark">
-            <a href="produkter.html" class="products">
+        <div class="allServices">
+            <a href="products.html" class="products" textColor="dark">
                 Produkter
-            </a>
-            <a href="blommogram.html" class="flowergram">
-                Blommogram
-            </a>
-            <a href="andra_tjänster.html" class="otherServices">
-                Andra Tjänster
             </a>
         </div>
     </div>
     <div class="mainInfo">
+        <div class="centerInfo">
+            <div class="welcomeMessage" textColor="dark">
+                Välkommen till Delikat Flora!
+            </div>
+        </div>
         <div class="bottomInfo">
             <div class="openingHours" textColor="light">
                 <p class="subtitle">
