--- a/website/other_services.html
+++ b/website/other_services.html
@@ -20,15 +20,29 @@
             <a href="products.html" class="products" textColor="dark">
                 Produkter
             </a>
-            <a href="other_services.html" class="otherServices" textColor="dark">
+            <div class="otherServices" textColor="dark">
                 Andra Tjänster
-            </a>
+            </div>
         </div>
     </div>
     <div class="mainInfo">
         <div class="centerInfo" textSize ="small">
-            <div class="welcomeMessage" textColor="dark" textSize ="large">
-                Välkommen till Delikat Flora!
+            <div class="servicesPage">
+                <div class="service">
+                    <div class="serviceName" textSize ="medium">
+                        Konsultation
+                    </div>
+                    <div class="priceTag" centered>
+                        250kr / 30 minuter
+                    </div>
+                    <img src="../images/consultation.jpg" alt="">
+                    <div class="serviceDescription">
+                        Vill du ha hjälp att välja blommor till ett speciellt tillfälle eller skapa en unik 
+                        bukett som passar just din stil?  Under en 30-minuters konsultation får du personlig 
+                        rådgivning av våra florister.  Vi går tillsammans igenom dina önskemål, färger, former 
+                        och känslan du vill förmedla. Kontakta oss så fixar vi en tid med en av våra florister. 
+                    </div>
+                </div>
             </div>
         </div>
         <div class="bottomInfo" textSize ="small">
