--- a/website/products.html
+++ b/website/products.html
@@ -10,27 +10,30 @@
 
 <body>
     <div class="header">
-        <a href="index.html" class="title" textColor="light">
+        <a href="index.html" class="title" textColor="light" textSize ="large">
             DELIKAT FLORA
         </a>
-        <div class="logo">
+        <div class="logo" textSize ="large">
             F
         </div>
-        <div class="allServices">
+        <div class="allServices" textSize ="medium">
             <div class="products" textColor="dark">
                 Produkter
             </div>
+            <a href="other_services.html" class="otherServices" textColor="dark">
+                Andra Tjänster
+            </a>
         </div>
     </div>
     <div class="mainInfo">
-        <div class="centerInfo">
+        <div class="centerInfo" textSize ="small">
             <div class="productsPage">
                 <div class="product">
                     <img src="../images/10_pack_tulips.png" alt="">
                     <div class="productDescription">
                         10 Tulpaner
                     </div>
-                    <div class="priceTag" [productDescription]>
+                    <div class="priceTag">
                         <div textColor="greyish">
                             Från:
                         </div>
@@ -44,7 +47,7 @@
                     <div class="productDescription">
                         10 Rosor
                     </div>
-                    <div class="priceTag" [productDescription]>
+                    <div class="priceTag">
                         <div textColor="greyish">
                             Från:
                         </div>
@@ -58,7 +61,7 @@
                     <div class="productDescription">
                         Höst Bukett
                     </div>
-                    <div class="priceTag" [productDescription]>
+                    <div class="priceTag">
                         <div textColor="greyish">
                             Från:
                         </div>
@@ -72,7 +75,7 @@
                     <div class="productDescription">
                         Begravningskrans
                     </div>
-                    <div class="priceTag" [productDescription]>
+                    <div class="priceTag">
                         <div textColor="greyish">
                             Från:
                         </div>
@@ -86,7 +89,7 @@
                     <div class="productDescription">
                         Bröllopsbukett
                     </div>
-                    <div class="priceTag" [productDescription]>
+                    <div class="priceTag">
                         <div textColor="greyish">
                             Från:
                         </div>
@@ -100,7 +103,7 @@
                     <div class="productDescription">
                         Sommarbukett
                     </div>
-                    <div class="priceTag" [productDescription]>
+                    <div class="priceTag">
                         <div textColor="greyish">
                             Från:
                         </div>
@@ -111,9 +114,9 @@
                 </div>
             </div>
         </div>
-        <div class="bottomInfo">
+        <div class="bottomInfo" textSize ="small">
             <div class="openingHours" textColor="light">
-                <p class="subtitle">
+                <p class="subtitle" textSize ="medium">
                     Öppettider:
                 </p>
                 <table class="openingHoursTable" textColor="light">
@@ -175,8 +178,8 @@
                     </tr>
                 </table>
             </div>
-            <div class="contactInfo" textColor="light">
-                <p class="subtitle">
+            <div class="contactInfo" textColor="light" textSize ="small">
+                <p class="subtitle" textSize ="medium">
                     Kontaktinformation:
                 </p>
                 <p>
@@ -188,7 +191,7 @@
                 <p>
                     Adress: Fjällgatan 32H 981 39 Finspång
                 </p>
-                <div class="logo">
+                <div class="logo" textSize ="large">
                     F
                 </div>
             </div>
