--- a/website/index.html
+++ b/website/index.html
@@ -34,7 +34,7 @@
         <div class="bottomInfo" textSize ="small">
             <div class="openingHours" textColor="light">
                 <p class="subtitle" textSize ="medium">
-                    Öppettider:
+                    Öppettider
                 </p>
                 <table class="openingHoursTable" textColor="light">
                     <tr>
@@ -95,9 +95,15 @@
                     </tr>
                 </table>
             </div>
+            <div class="aboutUs" textColor="light">
+                <p class="subtitle" textSize ="medium">
+                    Delikat Flora
+                </p>
+                <a href="about_us.html"> Om oss</a>
+            </div>
             <div class="contactInfo" textColor="light">
                 <p class="subtitle" textSize ="medium">
-                    Kontaktinformation:
+                    Kontaktinformation
                 </p>
                 <p>
                     Mail: info@github.pages.io
