--- a/website/products.html
+++ b/website/products.html
@@ -17,7 +17,7 @@
             F
         </div>
         <div class="allServices" textSize ="medium">
-            <div class="products" textColor="dark">
+            <div class="products" textColor="dark"> 
                 Produkter
             </div>
             <a href="other_services.html" class="otherServices" textColor="dark">
@@ -59,7 +59,7 @@
                 <div class="product">
                     <img src="../images/fall_bouquet.png" alt="">
                     <div class="productDescription">
-                        Höst Bukett
+                        Höstbukett
                     </div>
                     <div class="priceTag">
                         <div textColor="greyish">
@@ -117,7 +117,7 @@
         <div class="bottomInfo" textSize ="small">
             <div class="openingHours" textColor="light">
                 <p class="subtitle" textSize ="medium">
-                    Öppettider:
+                    Öppettider
                 </p>
                 <table class="openingHoursTable" textColor="light">
                     <tr>
@@ -178,9 +178,15 @@
                     </tr>
                 </table>
             </div>
+            <div class="aboutUs" textColor="light">
+                <p class="subtitle" textSize ="medium">
+                    Delikat Flora
+                </p>
+                <a href="about_us.html"> Om oss</a>
+            </div>
             <div class="contactInfo" textColor="light" textSize ="small">
                 <p class="subtitle" textSize ="medium">
-                    Kontaktinformation:
+                    Kontaktinformation
                 </p>
                 <p>
                     Mail: info@github.pages.io
