--- a/website/about_us.html
+++ b/website/about_us.html
@@ -4,19 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Om Oss</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <div class="header">
-        <a href="index.html" class="title" textColor="light" textSize ="large">
+        <a href="index.html" class="title" textColor="light" textSize="large">
             DELIKAT FLORA
         </a>
-        <div class="logo" textSize ="large">
+        <div class="logo" textSize="large">
             F
         </div>
-        <div class="allServices" textSize ="medium">
+        <div class="allServices" textSize="medium">
             <a href="products.html" class="products" textColor="dark">
                 Produkter
             </a>
@@ -26,28 +26,28 @@
         </div>
     </div>
     <div class="mainInfo">
-        <div class="centerInfo" textSize ="small">
+        <div class="centerInfo" textSize="small">
             <div class="staffPage">
                 <div class="staffMember">
-                    <img src="../images/fredrik_ortqvist.png" alt="">
-                    <p>Fredrik Ortqvist</p>
+                    <img src="../images/fredrik_ortqvist.jpg" alt="">
+                    <p>Fredrik Örtqvist</p>
                     <p>Ägare</p>
                 </div>
                 <div class="staffMember">
-                    <img src="../images/anna_pettersson.png" alt="">
+                    <img src="../images/anna_pettersson.jpg" alt="">
                     <p>Anna Pettersson</p>
                     <p>Hortonom</p>
                 </div>
                 <div class="staffMember">
-                    <img src="../images/orjan_johansson.png" alt="">
+                    <img src="../images/orjan_johansson.jpg" alt="">
                     <p>Örjan Johansson</p>
                     <p>Florist</p>
                 </div>
             </div>
         </div>
-        <div class="bottomInfo" textSize ="small">
+        <div class="bottomInfo" textSize="small">
             <div class="openingHours" textColor="light">
-                <p class="subtitle" textSize ="medium">
+                <p class="subtitle" textSize="medium">
                     Öppettider
                 </p>
                 <table class="openingHoursTable" textColor="light">
@@ -110,13 +110,13 @@
                 </table>
             </div>
             <div class="aboutUs" textColor="light">
-                <p class="subtitle" textSize ="medium">
+                <p class="subtitle" textSize="medium">
                     Delikat Flora
                 </p>
                 <a href="about_us.html"> Om oss</a>
             </div>
             <div class="contactInfo" textColor="light">
-                <p class="subtitle" textSize ="medium">
+                <p class="subtitle" textSize="medium">
                     Kontaktinformation
                 </p>
                 <p>
@@ -128,12 +128,11 @@
                 <p>
                     Adress: Fjällgatan 32H 981 39 Finspång
                 </p>
-                <div class="logo" textSize ="large">
+                <div class="logo" textSize="large">
                     F
                 </div>
             </div>
         </div>
     </div>
 </body>
-
 </html>
