--- a/website/other_services.html
+++ b/website/other_services.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Konsultation</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -32,7 +32,7 @@
                     <div class="serviceName" textSize ="medium">
                         Konsultation
                     </div>
-                    <div class="priceTag" centered>
+                    <div class="priceTag">
                         250kr / 30 minuter
                     </div>
                     <img src="../images/consultation.jpg" alt="">
