--- a/website/products.html
+++ b/website/products.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Våra Produkter</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -29,7 +29,7 @@
         <div class="centerInfo" textSize ="small">
             <div class="productsPage">
                 <div class="product">
-                    <img src="../images/10_pack_tulips.png" alt="">
+                    <img src="../images/tulips_10pack.jpg" alt="">
                     <div class="productDescription">
                         10 Tulpaner
                     </div>
@@ -43,7 +43,7 @@
                     </div>
                 </div>
                 <div class="product">
-                    <img src="../images/10_pack_roses.png" alt="">
+                    <img src="../images/roses_10pack.jpg" alt="">
                     <div class="productDescription">
                         10 Rosor
                     </div>
@@ -57,7 +57,7 @@
                     </div>
                 </div>
                 <div class="product">
-                    <img src="../images/fall_bouquet.png" alt="">
+                    <img src="../images/autumn_bouquet.jpg" alt="">
                     <div class="productDescription">
                         Höstbukett
                     </div>
@@ -71,7 +71,7 @@
                     </div>
                 </div>
                 <div class="product">
-                    <img src="../images/funeral_wreath.png" alt="">
+                    <img src="../images/funeral_wreath.jpg" alt="">
                     <div class="productDescription">
                         Begravningskrans
                     </div>
@@ -85,7 +85,7 @@
                     </div>
                 </div>
                 <div class="product">
-                    <img src="../images/wedding_bouquet.png" alt="">
+                    <img src="../images/wedding_bouquet.jpg" alt="">
                     <div class="productDescription">
                         Bröllopsbukett
                     </div>
@@ -99,7 +99,7 @@
                     </div>
                 </div>
                 <div class="product">
-                    <img src="../images/summer_bouquet.png" alt="">
+                    <img src="../images/summer_bouquet.jpg" alt="">
                     <div class="productDescription">
                         Sommarbukett
                     </div>
@@ -204,5 +204,4 @@
         </div>
     </div>
 </body>
-
 </html>
