A bunch of fixes + templates

--- a/website/about_us.html
+++ b/website/about_us.html
@@ -10,23 +10,23 @@
 
 <body>
     <div class="header">
-        <a href="index.html" class="title" textColor="light" textSize="large">
+        <a href="index.html" class="title textLarge textLight">
             DELIKAT FLORA
         </a>
-        <div class="logo" textSize="large">
+        <div class="logo textLarge">
             F
         </div>
-        <div class="allServices" textSize="medium">
-            <a href="products.html" class="products" textColor="dark">
+        <div class="allServices subtitle textMedium textDark">
+            <a href="products.html" class="products">
                 Produkter
             </a>
-            <a href="other_services.html" class="otherServices" textColor="dark">
-                Andra Tjänster
+            <a href="consultation.html" class="consultation">
+                Konsultation
             </a>
         </div>
     </div>
     <div class="mainInfo">
-        <div class="centerInfo" textSize="small">
+        <div class="centerInfo textSmall">
             <div class="staffPage">
                 <div class="staffMember">
                     <img src="../images/fredrik_ortqvist.jpg" alt="">
@@ -45,90 +45,99 @@
                 </div>
             </div>
         </div>
-        <div class="bottomInfo" textSize="small">
-            <div class="openingHours" textColor="light">
-                <p class="subtitle" textSize="medium">
-                    Öppettider
-                </p>
-                <table class="openingHoursTable" textColor="light">
-                    <tr>
-                        <td>
-                            Måndag
-                        </td>
-                        <td openingHours>
-                            10-16
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            Tisdag
-                        </td>
-                        <td openingHours>
-                            10-16
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            Onsdag
-                        </td>
-                        <td openingHours>
-                            12-18
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            Torsdag
-                        </td>
-                        <td openingHours>
-                            10-16
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            Fredag
-                        </td>
-                        <td openingHours>
-                            10-16
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            Lördag
-                        </td>
-                        <td openingHours>
-                            12-15
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            Söndag
-                        </td>
-                        <td openingHours>
-                            STÄNGT
-                        </td>
-                    </tr>
+        <div class="bottomInfo textSmall textLight">
+            <div class="openingHoursInfo">
+                <table class="openingHoursTable">
+                    <thead class="subtitle textMedium">
+                        <tr>
+                            <th>
+                                Dag
+                            </th>
+                            <th>
+                                Öppettider
+                            </th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>
+                                Måndag
+                            </td>
+                            <td>
+                                10-16
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                Tisdag
+                            </td>
+                            <td>
+                                10-16
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                Onsdag
+                            </td>
+                            <td>
+                                12-18
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                Torsdag
+                            </td>
+                            <td>
+                                10-16
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                Fredag
+                            </td>
+                            <td>
+                                10-16
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                Lördag
+                            </td>
+                            <td>
+                                12-15
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                Söndag
+                            </td>
+                            <td>
+                                STÄNGT
+                            </td>
+                        </tr>
+                    </tbody>
                 </table>
             </div>
-            <div class="aboutUs" textColor="light">
-                <p class="subtitle" textSize="medium">
+            <div class="aboutUsInfo">
+                <div class="subtitle textMedium">
                     Delikat Flora
-                </p>
+                </div>
                 <a href="about_us.html"> Om oss</a>
             </div>
-            <div class="contactInfo" textColor="light">
-                <p class="subtitle" textSize="medium">
+            <div class="contactInfo">
+                <div class="subtitle textMedium">
                     Kontaktinformation
+                </div>
+                <p>
+                    0630 555 555
                 </p>
                 <p>
-                    Mail: info@github.pages.io
+                    info@github.pages.io
                 </p>
                 <p>
-                    Telefonnummer: 0630 555 555
+                    Fjällgatan 32H 981 39 Finspång
                 </p>
-                <p>
-                    Adress: Fjällgatan 32H 981 39 Finspång
-                </p>
-                <div class="logo" textSize="large">
+                <div class="logo textLarge">
                     F
                 </div>
             </div>
