--- a/website/consultation.html
+++ b/website/consultation.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Våra Produkter</title>
+    <title>Konsultation</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -27,83 +27,20 @@
     </div>
     <div class="mainInfo">
         <div class="centerInfo textSmall">
-            <div class="productsPage">
-                <div class="product">
-                    <img src="../images/tulips_10pack.jpg" alt="">
-                    <div class="productDescription">
-                        10 Tulpaner
+            <div class="servicesPage">
+                <div class="service">
+                    <div class="serviceName textMedium">
+                        Konsultation
                     </div>
                     <div class="priceTag">
-                        <div>
-                            100 kr
-                        </div>
+                        250kr / 30 minuter
                     </div>
-                </div>
-                <div class="product">
-                    <img src="../images/roses_10pack.jpg" alt="">
-                    <div class="productDescription">
-                        10 Rosor
-                    </div>
-                    <div class="priceTag">
-                        <div>
-                            150 kr
-                        </div>
-                    </div>
-                </div>
-                <div class="product">
-                    <img src="../images/autumn_bouquet.jpg" alt="">
-                    <div class="productDescription">
-                        Höstbukett
-                    </div>
-                    <div class="priceTag">
-                        <div class="textGreyish">
-                            Från:
-                        </div>
-                        <div>
-                            400 kr
-                        </div>
-                    </div>
-                </div>
-                <div class="product">
-                    <img src="../images/funeral_wreath.jpg" alt="">
-                    <div class="productDescription">
-                        Begravningskrans
-                    </div>
-                    <div class="priceTag">
-                        <div class="textGreyish">
-                            Från:
-                        </div>
-                        <div>
-                            800 kr
-                        </div>
-                    </div>
-                </div>
-                <div class="product">
-                    <img src="../images/wedding_bouquet.jpg" alt="">
-                    <div class="productDescription">
-                        Bröllopsbukett
-                    </div>
-                    <div class="priceTag">
-                        <div class="textGreyish">
-                            Från:
-                        </div>
-                        <div>
-                            1200 kr
-                        </div>
-                    </div>
-                </div>
-                <div class="product">
-                    <img src="../images/summer_bouquet.jpg" alt="">
-                    <div class="productDescription">
-                        Sommarbukett
-                    </div>
-                    <div class="priceTag">
-                        <div class="textGreyish">
-                            Från:
-                        </div>
-                        <div>
-                            200 kr
-                        </div>
+                    <img src="../images/consultation.jpg" alt="">
+                    <div class="serviceDescription">
+                        Vill du ha hjälp att välja blommor till ett speciellt tillfälle eller skapa en unik 
+                        bukett som passar just din stil?  Under en 30-minuters konsultation får du personlig 
+                        rådgivning av våra florister.  Vi går tillsammans igenom dina önskemål, färger, former 
+                        och känslan du vill förmedla. Kontakta oss så fixar vi en tid med en av våra florister. 
                     </div>
                 </div>
             </div>
@@ -207,4 +144,5 @@
         </div>
     </div>
 </body>
+
 </html>
