removed unnecessary stuff, added .md files for dev info

--- a/_templates/modules/footer.html
+++ b/_templates/modules/footer.html
@@ -1,7 +1,7 @@
-<div class="bottomInfo textSmall textLight">
+<footer class="textSmall textLight">
             <div class="openingHoursInfo">
                 <table class="openingHoursTable">
-                    <thead class="subtitle textMedium">
+                    <thead class="textMedium">
                         <tr>
                             <th>
                                 Dag
@@ -72,13 +72,13 @@
                 </table>
             </div>
             <div class="aboutUsInfo">
-                <div class="subtitle textMedium">
+                <div class="textMedium">
                     Delikat Flora
                 </div>
                 <a href="about_us.html"> Om oss</a>
             </div>
             <div class="contactInfo">
-                <div class="subtitle textMedium">
+                <div class="textMedium">
                     Kontaktinformation
                 </div>
                 <p>
@@ -94,4 +94,4 @@
                     F
                 </div>
             </div>
-        </div>
+        </footer>
