--- a/_templates/modules/header.html
+++ b/_templates/modules/header.html
@@ -1,11 +1,11 @@
-<div class="header">
+<header>
         <a href="index.html" class="title textLarge textLight">
             DELIKAT FLORA
         </a>
         <div class="logo textLarge">
             F
         </div>
-        <div class="allServices subtitle textMedium textDark">
+        <div class="allServices textMedium textDark">
             <a href="products.html" class="products">
                 Produkter
             </a>
@@ -13,4 +13,4 @@
                 Konsultation
             </a>
         </div>
-    </div>
+    </header>
