--- a/_templates/pages/index.html
+++ b/_templates/pages/index.html
@@ -10,14 +10,14 @@
 
 <body>
     !!!HEADER!!!
-    <div class="mainInfo">
+    <main>
         <div class="centerInfo textSmall">
             <div class="welcomeMessage textLarge textDark">
                 Välkommen till Delikat Flora!
             </div>
         </div>
         !!!FOOTER!!!
-    </div>
+    </main>
 </body>
 
 </html>
