--- a/_templates/pages/products.html
+++ b/_templates/pages/products.html
@@ -10,7 +10,7 @@
 
 <body>
     !!!HEADER!!!
-    <div class="mainInfo">
+    <main>
         <div class="centerInfo textSmall">
             <div class="productsPage">
                 <div class="product">
@@ -94,7 +94,7 @@
             </div>
         </div>
         !!!FOOTER!!!
-    </div>
+    </main>
 </body>
 
 </html>
