--- a/website/consultation.html
+++ b/website/consultation.html
@@ -9,14 +9,14 @@
 </head>
 
 <body>
-    <div class="header">
+    <header>
         <a href="index.html" class="title textLarge textLight">
             DELIKAT FLORA
         </a>
         <div class="logo textLarge">
             F
         </div>
-        <div class="allServices subtitle textMedium textDark">
+        <div class="allServices textMedium textDark">
             <a href="products.html" class="products">
                 Produkter
             </a>
@@ -24,8 +24,8 @@
                 Konsultation
             </a>
         </div>
-    </div>
-    <div class="mainInfo">
+    </header>
+    <main>
         <div class="centerInfo textSmall">
             <div class="servicesPage">
                 <div class="service">
@@ -37,17 +37,18 @@
                     </div>
                     <img src="../images/consultation.jpg" alt="">
                     <div class="serviceDescription">
-                        Under en 30-minuters konsultation får du personlig
+                        Vill du ha hjälp att välja blommor till ett speciellt tillfälle eller skapa en unik
+                        bukett som passar just din stil? Under en 30-minuters konsultation får du personlig
                         rådgivning av våra florister. Vi går tillsammans igenom dina önskemål, färger, former
                         och känslan du vill förmedla. Kontakta oss så fixar vi en tid med en av våra florister.
                     </div>
                 </div>
             </div>
         </div>
-        <div class="bottomInfo textSmall textLight">
+        <footer class="textSmall textLight">
             <div class="openingHoursInfo">
                 <table class="openingHoursTable">
-                    <thead class="subtitle textMedium">
+                    <thead class="textMedium">
                         <tr>
                             <th>
                                 Dag
@@ -118,13 +119,13 @@
                 </table>
             </div>
             <div class="aboutUsInfo">
-                <div class="subtitle textMedium">
+                <div class="textMedium">
                     Delikat Flora
                 </div>
                 <a href="about_us.html"> Om oss</a>
             </div>
             <div class="contactInfo">
-                <div class="subtitle textMedium">
+                <div class="textMedium">
                     Kontaktinformation
                 </div>
                 <p>
@@ -140,8 +141,8 @@
                     F
                 </div>
             </div>
-        </div>
-    </div>
+        </footer>
+    </main>
 </body>
 
 </html>
