--- a/website/products.html
+++ b/website/products.html
@@ -9,14 +9,14 @@
 </head>
 
 <body>
-    <div class="header">
+    <header>
         <a href="index.html" class="title textLarge textLight">
             DELIKAT FLORA
         </a>
         <div class="logo textLarge">
             F
         </div>
-        <div class="allServices subtitle textMedium textDark">
+        <div class="allServices textMedium textDark">
             <a href="products.html" class="products">
                 Produkter
             </a>
@@ -24,8 +24,8 @@
                 Konsultation
             </a>
         </div>
-    </div>
-    <div class="mainInfo">
+    </header>
+    <main>
         <div class="centerInfo textSmall">
             <div class="productsPage">
                 <div class="product">
@@ -108,10 +108,10 @@
                 </div>
             </div>
         </div>
-        <div class="bottomInfo textSmall textLight">
+        <footer class="textSmall textLight">
             <div class="openingHoursInfo">
                 <table class="openingHoursTable">
-                    <thead class="subtitle textMedium">
+                    <thead class="textMedium">
                         <tr>
                             <th>
                                 Dag
@@ -182,13 +182,13 @@
                 </table>
             </div>
             <div class="aboutUsInfo">
-                <div class="subtitle textMedium">
+                <div class="textMedium">
                     Delikat Flora
                 </div>
                 <a href="about_us.html"> Om oss</a>
             </div>
             <div class="contactInfo">
-                <div class="subtitle textMedium">
+                <div class="textMedium">
                     Kontaktinformation
                 </div>
                 <p>
@@ -204,8 +204,8 @@
                     F
                 </div>
             </div>
-        </div>
-    </div>
+        </footer>
+    </main>
 </body>
 
 </html>
