--- a/_templates/pages/about_us.html
+++ b/_templates/pages/about_us.html
@@ -10,7 +10,7 @@
 
 <body>
     !!!HEADER!!!
-    <div class="mainInfo">
+    <main>
         <div class="centerInfo textSmall">
             <div class="staffPage">
                 <div class="staffMember">
@@ -31,7 +31,7 @@
             </div>
         </div>
         !!!FOOTER!!!
-    </div>
+    </main>
 </body>
 
 </html>
