--- a/_templates/pages/consultation.html
+++ b/_templates/pages/consultation.html
@@ -10,7 +10,7 @@
 
 <body>
     !!!HEADER!!!
-    <div class="mainInfo">
+    <main>
         <div class="centerInfo textSmall">
             <div class="servicesPage">
                 <div class="service">
@@ -31,7 +31,7 @@
             </div>
         </div>
         !!!FOOTER!!!
-    </div>
+    </main>
 </body>
 
 </html>
