clickable contact info

--- a/_templates/modules/footer.html
+++ b/_templates/modules/footer.html
@@ -82,13 +82,15 @@
                     Kontaktinformation
                 </div>
                 <p>
-                    0630 555 555
+                    <a href="tel:+0630555555">0630 555 555</a>
                 </p>
                 <p>
-                    info@github.pages.io
+                    <a href="mailto:info@github.pages.io">info@github.pages.io</a>
                 </p>
                 <p>
-                    Fjällgatan 32H 981 39 Finspång
+                    <a href="https://www.google.com/maps?q=Fjällgatan 32H 981 39 Finspång" target="_blank">
+                        Fjällgatan 32H 981 39 Finspång
+                    </a>
                 </p>
                 <div class="logo textLarge">
                     F
