moms button added

--- a/website/about_us.html
+++ b/website/about_us.html
@@ -118,12 +118,14 @@
                     </tbody>
                 </table>
             </div>
+            <div class="divider"></div>
             <div class="aboutUsInfo">
                 <div class="textMedium">
                     Delikat Flora
                 </div>
                 <a href="about_us.html"> Om oss</a>
             </div>
+            <div class="divider"></div>
             <div class="contactInfo">
                 <div class="textMedium">
                     Kontaktinformation
