--- a/website/consultation.html
+++ b/website/consultation.html
@@ -37,8 +37,7 @@
                     </div>
                     <img src="../images/consultation.jpg" alt="">
                     <div class="serviceDescription">
-                        Vill du ha hjälp att välja blommor till ett speciellt tillfälle eller skapa en unik
-                        bukett som passar just din stil? Under en 30-minuters konsultation får du personlig
+                        Under en 30-minuters konsultation får du personlig
                         rådgivning av våra florister. Vi går tillsammans igenom dina önskemål, färger, former
                         och känslan du vill förmedla. Kontakta oss så fixar vi en tid med en av våra florister.
                     </div>
@@ -118,12 +117,14 @@
                     </tbody>
                 </table>
             </div>
+            <div class="divider"></div>
             <div class="aboutUsInfo">
                 <div class="textMedium">
                     Delikat Flora
                 </div>
                 <a href="about_us.html"> Om oss</a>
             </div>
+            <div class="divider"></div>
             <div class="contactInfo">
                 <div class="textMedium">
                     Kontaktinformation
