--- a/website/products.html
+++ b/website/products.html
@@ -27,6 +27,12 @@
     </header>
     <main>
         <div class="centerInfo textSmall">
+            <div class="sortingOptions">
+                <label class="momsButton textExtraSmall">
+                Visa priser utan moms
+                <input type="checkbox" class="momsCheckbox" id="toggleVAT"> 
+            </label>
+            </div>
             <div class="productsPage">
                 <div class="product">
                     <img src="../images/tulips_10pack.jpg" alt="">
@@ -35,7 +41,7 @@
                     </div>
                     <div class="priceTag">
                         <div>
-                            100 kr
+                            <span>100</span>kr
                         </div>
                     </div>
                 </div>
@@ -46,7 +52,7 @@
                     </div>
                     <div class="priceTag">
                         <div>
-                            150 kr
+                            <span>150</span>kr
                         </div>
                     </div>
                 </div>
@@ -60,7 +66,7 @@
                             Från:
                         </div>
                         <div>
-                            400 kr
+                            <span>400</span>kr
                         </div>
                     </div>
                 </div>
@@ -74,7 +80,7 @@
                             Från:
                         </div>
                         <div>
-                            800 kr
+                            <span>800</span>kr
                         </div>
                     </div>
                 </div>
@@ -88,7 +94,7 @@
                             Från:
                         </div>
                         <div>
-                            1200 kr
+                            <span>1200</span>kr
                         </div>
                     </div>
                 </div>
@@ -102,7 +108,7 @@
                             Från:
                         </div>
                         <div>
-                            200 kr
+                            <span>200</span>kr
                         </div>
                     </div>
                 </div>
@@ -181,12 +187,14 @@
                     </tbody>
                 </table>
             </div>
+            <div class="divider"></div>
             <div class="aboutUsInfo">
                 <div class="textMedium">
                     Delikat Flora
                 </div>
                 <a href="about_us.html"> Om oss</a>
             </div>
+            <div class="divider"></div>
             <div class="contactInfo">
                 <div class="textMedium">
                     Kontaktinformation
@@ -208,6 +216,6 @@
             </div>
         </footer>
     </main>
+    <script src="toggle_vat.js"></script>
 </body>
-
 </html>
