Changed all swedish text in code and comments to english

--- a/_templates/pages/products.html
+++ b/_templates/pages/products.html
@@ -13,9 +13,9 @@
     <main>
         <div class="centerInfo textSmall">
             <div class="sortingOptions">
-                <label class="momsButton textExtraSmall">
+                <label class="vatButton textExtraSmall">
                 Visa priser utan moms
-                <input type="checkbox" class="momsCheckbox" id="toggleVAT"> 
+                <input type="checkbox" class="vatCheckbox" id="toggleVAT"> 
             </label>
             </div>
             <div class="productsPage">
