--- a/_templates/modules/header.html
+++ b/_templates/modules/header.html
@@ -12,5 +12,8 @@
             <a href="consultation.html" class="consultation">
                 Konsultation
             </a>
+            <a href="flowergram.html" class="flowergram">
+                Blommogram
+            </a>
         </div>
     </header>
