--- a/website/flowergram.html
+++ b/website/flowergram.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Konsultation</title>
+    <title>Delikat Flora</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -33,16 +33,17 @@
             <div class="servicesPage">
                 <div class="service">
                     <div class="serviceName textMedium">
-                        Konsultation
+                        Blommogram
                     </div>
-                    <div class="priceTag">
-                        250kr / 30 minuter
+                    <img src="images/flowergram.jpg" alt="">
+                    <div class="sendFlowersText textMediumSmall">
+                        Skicka blombuketter med vår blommogramtjänst
                     </div>
-                    <img src="images/consultation.jpg" alt="">
-                    <div class="serviceDescription">
-                        Under en 30-minuters konsultation får du personlig
-                        rådgivning av våra florister. Vi går tillsammans igenom dina önskemål, färger, former
-                        och känslan du vill förmedla. Kontakta oss så fixar vi en tid med en av våra florister.
+                    <div class="serviceDescription textSmall">
+                        Med vår blommogram-tjänst kan du enkelt överraska någon med vackra blommor, 
+                        levererade direkt till dörren. Välj bukett, skriv en personlig hälsning, så 
+                        sköter vi resten. Perfekt för födelsedagar, högtider eller vardagsglädje.
+
                     </div>
                 </div>
             </div>
