--- a/website/products.html
+++ b/website/products.html
@@ -23,14 +23,17 @@
             <a href="consultation.html" class="consultation">
                 Konsultation
             </a>
+            <a href="flowergram.html" class="flowergram">
+                Blommogram
+            </a>
         </div>
     </header>
     <main>
         <div class="centerInfo textSmall">
             <div class="sortingOptions">
-                <label class="momsButton textExtraSmall">
+                <label class="vatButton textExtraSmall">
                 Visa priser utan moms
-                <input type="checkbox" class="momsCheckbox" id="toggleVAT"> 
+                <input type="checkbox" class="vatCheckbox" id="toggleVAT"> 
             </label>
             </div>
             <div class="productsPage">
