--- a/website/index.html
+++ b/website/index.html
@@ -23,6 +23,9 @@
             <a href="consultation.html" class="consultation">
                 Konsultation
             </a>
+            <a href="flowergram.html" class="flowergram">
+                Blommogram
+            </a>
         </div>
     </header>
     <main>
